@@ -21,6 +21,7 @@ struct column {
 	int	length;
 	int	precision;
 	int	scale;
+	int	nullable;
 };
 
 class db2connection;
