@@ -417,7 +417,8 @@ void	oracle7cursor::returnColumnInfo() {
 					(short)desc[i].buflen,type,
 					(int)desc[i].dbsize,
 					(unsigned short)desc[i].precision,
-					(unsigned short)desc[i].scale);
+					(unsigned short)desc[i].scale,
+					(unsigned short)desc[i].nullok,0);
 	}
 }
 
