@@ -649,7 +649,7 @@ void	sybasecursor::returnColumnInfo() {
 					type,
 					column[i].maxlength,
 					column[i].precision,
-					column[i].scale);
+					column[i].scale,0,0);
 	}
 }
 
